# amortizer

./: .gitignore  .readthedocs.yaml  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
amortizer/: generator.py  main.py
docs/: conf.py
docs/_build/doctrees/: amortizer.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  amortizer.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: amortizer.rst.txt  index.rst.txt  modules.rst.txt
docs/source/: amortizer.rst  conf.py  index.rst  modules.rst
html/: main.html
