[metadata]
name = amortizer
version = 0.0.3
author = Valentine Solonechnyi
author_email = valentinesolo@gmail.com
description = Simple package for generating loan amortization table and summary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vlntsolo/amortizer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Investment

[options]
packages = find:
python_requires = >=3.7
include_package_data = True